@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 16:25:23 brook Exp $
+
+SHA1 (R/tidyr_0.8.3.tar.gz) = d834818f6dd64e846f28bf921f497c1f9990aa2f
+RMD160 (R/tidyr_0.8.3.tar.gz) = f2d136b8094cfc59059ebdb05aa2c6fba468493e
+SHA512 (R/tidyr_0.8.3.tar.gz) = 56cf9e88f887c18cdc665a377bf4d60e9de1032bf0c20b7ad1aa19d0f461cad4658e8d7f412927a62f4f80a7af6ec338bfc398ebc7c4cba5809293b9d4d93ab9
+Size (R/tidyr_0.8.3.tar.gz) = 383932 bytes
